<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="426dp"
        android:layout_height="951dp"
        android:alpha="0.3"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <Button
        android:id="@+id/loginbutton"
        style="@style/Widget.Material3.Button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="692dp"
        android:layout_marginBottom="209dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SIDtext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="368dp"
        android:layout_marginBottom="538dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/s23010301"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Usernametext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="512dp"
        android:layout_marginBottom="395dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Passwordtext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="576dp"
        android:layout_marginBottom="331dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="641dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

</androidx.constraintlayout.widget.ConstraintLayout>